<resources>
    <string name="app_name">海豚笔迹</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_user">请输入手机号/用户名登录</string>
    <string name="prompt_password">请输入登录密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">立即注册</string>
    <string name="action_resetpw">忘记密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">输入不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_create">新会议</string>
    <string name="action_record">历史会议</string>
    <string name="action_more">更多</string>
    <string name="action_files">文件</string>
    <string name="action_rotate_left">左转</string>
    <string name="action_rotate_right">右转</string>
    <string name="confirm_exit_meeting">确认退出会议?</string>
    <string name="confirm_end_meeting">确认结束会议?</string>
    <string name="prompt_title_info">提示</string>
    <string name="prompt_no">取消</string>
    <string name="prompt_yes">确定</string>
    <string name="prompt_bluetooth">请允许开启蓝牙，并重新创建会议</string>
    <string name="prompt_bluetooth_ok">允许</string>
    <string name="prompt_bluetooth_no">拒绝</string>
    <string name="prompt_members">是否邀请朋友加入会议?</string>
    <string name="prompt_conference_finished">本会议已结束，相关资料请在历史会议中查看</string>
    <string name="prompt_join_failure">加入会议失败</string>
    <string name="prompt_upload_snapshot_failure">上传截屏失败</string>
    <string name="meeting_members_title">会议信息</string>
    <string name="meeting_name">会议名称</string>
    <string name="meeting_date">会议日期</string>
    <string name="meeting_pw">会议密码</string>
    <string name="meeting_location">会议地点</string>
    <string name="meeting_company">参与单位</string>
    <string name="meeting_abstract">会议概要</string>
    <string name="meeting_attachment">上传附件</string>
    <string name="meeting_host">主持人　</string>
    <string name="nickname">昵　　称</string>
    <string name="meeting_list">会议列表</string>
    <string name="white_board">白板</string>
    <string name="wb_members">成员</string>
    <string name="action_snapshot">截屏</string>
    <string name="action_password_input">请输入会议密码</string>
    <string name="qr_not_found">未能识别设备二维码</string>
    <string name="server_connection_down">与服务器的连接断开了</string>
    <string name="bluetooth_connection_down">与蓝牙设备连接断开</string>
    <string name="bluetooth_connect_failure">未能连接蓝牙设备</string>
    <string name="bluetooth_device_not_found">未能找到蓝牙设备</string>
    <string name="bluetooth_connection_recover">蓝牙设备连接恢复</string>
    <string name="network_slow_code">网络堵车~\r\n错误码: %d</string>
    <string name="network_slow_text">网络堵车~\r\n错误码: %s</string>
    <string name="error_no_bluetooth">本机没有找到蓝牙硬件或驱动!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_wxlogin">微信登录</string>
    <string name="title_activity_qrscanner">QRScannerActivity</string>
    <string name="about">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
    bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
    ccccccccccccccccccccccc</string>
    <string name="agreementTitle">海豚笔迹APP用户使用协议</string>
</resources>