<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ifingers.yunwb.ActionListActivity">

    <LinearLayout
        android:id="@+id/action_list_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:gravity="center"
        android:background="#f5f5f5">

        <LinearLayout
            android:id="@+id/action_launch_conf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@mipmap/new_conf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/action_create"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@mipmap/record" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/action_record"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@mipmap/setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/action_more"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/conference_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/action_list_tab_bar"/>
    <LinearLayout
        android:id="@+id/view_create"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/no_conference"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="暂时没有新会议"
            android:layout_margin="10dp"
            android:textColor="#999999"/>
        <TextView
            android:id="@+id/txt_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="创建会议"
            android:textColor="#5cb9ef"/>
    </LinearLayout>
</RelativeLayout>
