<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ifingers.yunwb.WhiteBoardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6E6E6">

        <LinearLayout
            android:id="@+id/wb_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:paddingTop="5dp"
            android:orientation="horizontal"
            android:background="#F0F0F0">

            <LinearLayout
                android:id="@+id/wb_members"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@mipmap/members" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/wb_members"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/action_snapshot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@mipmap/snapshot" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/action_snapshot"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/action_wb_more"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@mipmap/more" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/action_files"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/wb_tab_bar">
            <FrameLayout
                android:id="@+id/ly_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/waiting_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/fg_right_menu"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#4d4d4d"
        android:choiceMode="singleChoice"
        android:divider="#333333"
        android:dividerHeight="2dp"
        android:fitsSystemWindows="true" />

</android.support.v4.widget.DrawerLayout>
